Some changes in mobie version.

--- a/lang/az.json
+++ b/lang/az.json
@@ -48,9 +48,12 @@
   "email_placeholder": "E-poçt...",
   "business_develop": "Biznesinizi bizimlə inkişaf etdirin",
   "have_question": "Sualınız var?",
-  "other_service": "Digər xidmətlər",
+  "other_service": "Digər xidmətlərimiz",
   "service_offer": "Xidmət təklifi al",
-  "other_posts": "Digər layihələr"
+  "other_posts": "Digər layihələr",
+  "services_all": "Bütün xidmətlər"
+
+
 
 
 
