--- a/lang/en.json
+++ b/lang/en.json
@@ -48,9 +48,11 @@
   "email_placeholder": "Email...",
   "business_develop": "Grow your business with us",
   "have_question": "Have a question?",
-  "other_service": "Other service",
+  "other_service": "Other services",
   "service_offer": "Get a service offer",
-  "other_posts": "Other projects"
+  "other_posts": "Other projects",
+  "services_all": "All services"
+
 
 
 
