--- a/lang/ru.json
+++ b/lang/ru.json
@@ -50,7 +50,9 @@
   "have_question": "Есть вопрос?",
   "other_service": "Другие услуги",
   "service_offer": "Получить предложение",
-  "other_posts": "Другие проекты"
+  "other_posts": "Другие проекты",
+  "services_all": "Все услуги"
+
 
 
 
