--- a/lang/ru.json
+++ b/lang/ru.json
@@ -24,7 +24,7 @@
   "download_news": "Скачать эту новость:",
   "error_404_text": "К сожалению, запрошенная вами страница недоступна!",
   "back_home_page": "Вернуться на главную страницу",
-  "address": "Адрес:",
+  "address": "Адрес",
   "Tel:": "Тел:",
   "Fax:": "Факс:",
   "more_details": "читать далее",
