Change BreadCrumb make there dinamic.

--- a/lang/az.json
+++ b/lang/az.json
@@ -24,7 +24,7 @@
   "download_news": "Xəbəri yükləyin:",
   "error_404_text": "Üzr istəyirik, sorğu etdiyiniz səhifə mövcud deyil!",
   "back_home_page": "Əsas səhifəyə qayıdın",
-  "address": "Ünvan:",
+  "address": "Ünvan",
   "Tel:": "Tel:",
   "Fax:": "Fax:",
   "more_details": "daha ətraflı",
@@ -38,7 +38,7 @@
   "services_2": "Xidmətlərimiz",
   "partners": "Tərəfdaşlar",
   "blogs": "Bloq",
-  "faq": "sual-cavab",
+  "faq": "Sual-cavab",
   "our_works": "İşlərimiz",
   "service_dream": "Biz xəyallarınızı əlçatan edirik!",
   "our_latest_crafts": "Son əl işlərimiz ilə tanış ola bilərsiniz",
