--- a/lang/en.json
+++ b/lang/en.json
@@ -8,7 +8,7 @@
   "professional_consultation": "Ask for professional advice",
   "name": "name",
   "surname": "surname",
-  "phone": "phone:",
+  "phone": "phone",
   "email": "Email",
   "message": "message",
   "send": "send",
@@ -24,7 +24,7 @@
   "download_news": "Download the news:",
   "error_404_text": "We are sorry, the page you've requested is not available!",
   "back_home_page": "Back to home page",
-  "address": "Address:",
+  "address": "Address",
   "Tel:": "Tel:",
   "Fax:": "Fax:",
   "more_details": "read more",
@@ -38,7 +38,7 @@
   "services_2": "Our services",
   "partners": "Partners",
   "blogs": "Blog",
-  "faq": "faq",
+  "faq": "Faq",
   "our_works": "Portfolio",
   "service_dream": "We make your dreams come true!",
   "our_latest_crafts": "Introduce our projects and check recent work",
