Add video in services page.

--- a/lang/az.json
+++ b/lang/az.json
@@ -51,22 +51,6 @@
   "other_service": "Digər xidmətlərimiz",
   "service_offer": "Xidmət təklifi al",
   "other_posts": "Digər layihələr",
-  "services_all": "Bütün xidmətlər"
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  "services_all": "Bütün xidmətlər",
+  "no_information": "Məlumat yoxdur"
 }
