--- a/lang/en.json
+++ b/lang/en.json
@@ -51,10 +51,6 @@
   "other_service": "Other services",
   "service_offer": "Get a service offer",
   "other_posts": "Other projects",
-  "services_all": "All services"
-
-
-
-
-
+  "services_all": "All services",
+  "no_information": " No information"
 }
