--- a/lang/ru.json
+++ b/lang/ru.json
@@ -51,11 +51,6 @@
   "other_service": "Другие услуги",
   "service_offer": "Получить предложение",
   "other_posts": "Другие проекты",
-  "services_all": "Все услуги"
-
-
-
-
-
-
+  "services_all": "Все услуги",
+  "no_information": "Нет информации"
 }
